Solved overflow styling issue

--- a/css/style.css
+++ b/css/style.css
@@ -61,16 +61,14 @@ figure{
   margin: 10px;
   width: 30%;
   height: 275px;
-  border: double black 3px;
-  border-radius: 15px;
-  /* overflow: hidden; */
-  /* I WANT TO HIDE OVERFLOW SO THE PICS ARENT OVER ROUNDED CORNERS, BUT DOING THAT MAKES CAPTION GO AWAY */
 }
 
 section > figure > img{
   box-sizing: border-box;
   width: 100%;
   height: 100%;  
+  border: double black 3px;
+  border-radius: 15px;
 }
 
 figcaption{
@@ -82,20 +80,22 @@ figcaption{
 #words{
   /* background-color: rgb(243, 156, 243); */
   /* border: solid black 1px; */
-  margin-top: 40px;
-  margin-left: 24px;
-  padding: 10px;
+  margin: 40px 30px 20px 25px;
+
+  /* padding: 10px; */
   width: 100;
 }
 
 p{
   font-size: 30px;
   font-family: 'Roboto', sans-serif;
+  text-align: justify;
 }
 
 footer{
   /* background-color: lightseagreen; */
   width: 100%;
-  margin-top: 30px;
-  font-size: 10px;
+  margin: 30px 10px;
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
 }
